2007-07-20  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=14642
        REGRESSION(r24064-24096): Reflection type effect in canvas tag broke

        * fast/canvas/gradient-empty-path-expected.checksum: Added.
        * fast/canvas/gradient-empty-path-expected.png: Added.
        * fast/canvas/gradient-empty-path-expected.txt: Added.
        * fast/canvas/gradient-empty-path.html: Added.

2007-07-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.
        
        Test for http://bugs.webkit.org/show_bug.cgi?id=10880 | <rdar://problem/5335694>
        REGRESSION: JavaScript menu doesn't appear on pricepoint.com (14595)
        
        * fast/js/do-while-without-semicolon-expected.txt: Added.
        * fast/js/do-while-without-semicolon.html: Added.

2007-07-19  Antti  <antti@apple.com>

        Reviewed by Darin.
        
        Test for <rdar://problem/5257371>
        Dashcode Client crash when clicking on placemarks in Maps widget in WebCore::DeprecatedPtrListImpl::addIterator

        * fast/flexbox/inline-children-crash-expected.txt: Added.
        * fast/flexbox/inline-children-crash.html: Added.

2007-07-19  Antti  <antti@apple.com>

        Reviewed by John.
        
        Update test case to work better as a pixel test.

        * fast/layers/layer-visibility-expected.checksum:
        * fast/layers/layer-visibility-expected.png:
        * fast/layers/layer-visibility-expected.txt:
        * fast/layers/layer-visibility.html:

2007-07-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14646
        WebKit border radius properties are unavailable via JavaScript

        * fast/dom/getComputedStyle-borderRadius-expected.txt: Added.
        * fast/dom/getComputedStyle-borderRadius.html: Added.

2007-07-18  Adam Roben  <aroben@apple.com>

	Disable SSL tests on Windows
